--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -22,3 +22,41 @@ server {
         	}
     }
 }
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name _;
+    root /var/www/html/public;
+    index index.php;
+
+    ssl_certificate /var/www/html/docker/nginx/ssl/nginx.crt;
+    ssl_certificate_key /var/www/html/docker/nginx/ssl/nginx.key;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+    add_header Strict-Transport-Security max-age=15768000;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+
+
+    error_log /var/log/nginx/error.log;
+    client_max_body_size 5M;
+
+    location / {
+            try_files $uri /$uri /index.php?$query_string;
+            location ~ [^/]\.php(/|$) {
+                    fastcgi_buffer_size 128k;
+                    fastcgi_buffers 4 256k;
+            		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            		fastcgi_pass php:9000;
+            		fastcgi_index index.php;
+            		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            		include fastcgi_params;
+
+            		fastcgi_param HTTPS off;
+            		fastcgi_param APPLICATION_ENV local;
+            	}
+        }
+}
