--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
             dockerfile: docker/nginx/Dockerfile
         ports:
             - "${WEB_HTTP_PORT:-80}:80"
-            - "${WEB_HTTP_PORT:-443}:443"
+            - "${WEB_HTTPS_PORT:-443}:443"
         depends_on:
             - php
         working_dir: /var/www/html
